Fix the extract method preview wrapping code to the next line instead of providing a horizontal scrollbar.

--- a/styles/main.less
+++ b/styles/main.less
@@ -33,6 +33,7 @@
     }
     .preview-area {
         max-height: 400px;
+        word-wrap: normal;
     }
     // Should change to reflect the padding of the theme instead of hardcoded.
     .block {
